# tinychat

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
chat/server/: friends_trance1  friends_trance2  users.txt
log/: 2025-1-13-1  2025-1-15-1  2025-1-22-2  2025-2-8-1  2025-4-17-1  2025-5-7-1
src/: fd_event.cc  fd_event.h  init.cc  init.h  io_thread.cc  io_thread.h  log.cc  log.h  reactor.cc  reactor.h  server.cc  server.h  test  testlog.cc  thread.cc  thread.h  timer.cc  timer.h  util.cc  util.h
src/client/: chat_client.cc  chat_client.h
src/easyconfig/: config.cc  config.h  config.txt  parce.cc  parse.cc  parse.h  test  testparse.cc
src/net/: address.cc  address.h  bytearray.cc  bytearray.h  socket.cc  socket.h  socket_stream.cc  socket_stream.h
src/rpc/: function.cc  function.h  rpc_server.cc  rpc_server.h  trance_protocol.cc  trance_protocol.h
test/: test_address.cc  test_bytearray.cc  test_client.cc  test_config.cc  test_init.cc  test_iothread.cc  test_log.cc  test_parse.cc  test_reactor.cc  test_rpc_server.cc  test_socket.cc  test_socket_client.cc  test_thread.cc  test_timer.cc
